# visualime

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTORS  LICENSE  MANIFEST.in  README.md  example.ipynb  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  release-package.yml  unit-test.yml
docs/: requirements.txt
docs/source/: baylime.rst  conf.py  explain.rst  feature_selection.rst  index.rst  introduction.rst  lime.rst  visualime.rst  visualize.rst
docs/user_guide/: Getting_Started.ipynb  README.rst  image_segmentation.py
tests/: test_baylime.py  test_explain.py  test_feature_selection.py  test_lime.py  test_visualize.py
visualime/: _models.py  baylime.py  explain.py  feature_selection.py  generate.py  lime.py  metrics.py  visualize.py
