[metadata]
name = visualime
version = attr: visualime.__version__
author = The VisuaLIME developers
author_email = xai.demonstrator@gmail.com
description = Visual explanations for humans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xai-demonstrator/visualime
license = Apache 2.0 License
project_urls =
    Bug Tracker = https://github.com/xai-demonstrator/visualime/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = visualime
install_requires =
    numpy>=1.13.0
    scikit-learn
    scikit-image
    Pillow

python_requires = >=3.6
