[metadata]
name = visualime
version = attr: visualime.__version__
author = The VisuaLIME developers
author_email = xai.demonstrator@gmail.com
description = Visual explanations for humans
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xai-demonstrator/visualime
license = Apache 2.0 License
project_urls =
    Bug Tracker = https://github.com/xai-demonstrator/visualime/issues
    Documentation = https://visualime.readthedocs.io/
    Source Code = https://github.com/xai-demonstrator/visualime
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = visualime
install_requires = file: requirements.txt

python_requires = >=3.8
